--- a/analysis/average_OIA.Rmd
+++ b/analysis/average_OIA.Rmd
@@ -62,7 +62,7 @@ labels_breaks <- function(i_var) {
   
   if (i_var == "H_free") {
     i_breaks <- c(-Inf, seq(0, 3, 0.5), Inf)
-    i_contour_level <- 2
+    i_contour_level <- 1.5
     i_legend_title <-
       "ΔH<sup>+</sup><sub>free</sub><br>(nmol kg<sup>-1</sup>)"
   }
@@ -3322,8 +3322,26 @@ acidification_depth_layer_total_trend <-
   filter(variable %in% OIA_variables[-6]) %>%
   group_by(depth, biome, tref, variable) %>%
   summarise(delta_total = weighted.mean(delta_total, area)) %>%
-  ungroup() %>%
+  ungroup()
+
+acidification_depth_layer_total_trend_global <-
+  inner_join(acidification_depth_layer_total,
+             biomemask) %>%
+  filter(variable %in% OIA_variables[-6]) %>%
+  mutate(biome = "Global") %>% 
+  group_by(depth, biome, tref, variable) %>%
+  summarise(delta_total = weighted.mean(delta_total, area)) %>%
+  ungroup()
+
+
+acidification_depth_layer_total_trend <-
+  bind_rows(
+    acidification_depth_layer_total_trend,
+    acidification_depth_layer_total_trend_global
+  ) %>%
   mutate(tref = str_remove(tref, "1800-"))
+
+rm(acidification_depth_layer_total_trend_global)
 
 acidification_depth_layer_total_trend <-
   full_join(
@@ -3339,6 +3357,21 @@ acidification_depth_layer_total_trend <-
   left_join(acidification_depth_layer_total_trend %>%
               rename(year = tref),
             co2_atm_reccap2)
+
+acidification_depth_layer_total_zonal <-
+  acidification_depth_layer_total %>%
+  filter(variable %in% OIA_variables[-6]) %>%
+  group_by(depth, tref, variable, lat) %>%
+  summarise(delta_total = mean(delta_total)) %>%
+  ungroup() %>%
+  mutate(tref = str_remove(tref, "1800-"))
+
+acidification_depth_layer_total_zonal %>% 
+  ggplot(aes(delta_total, lat, col = tref)) +
+  geom_vline(xintercept = 0) +
+  geom_path() +
+  scale_color_manual(values = three_year_colors) +
+  facet_grid(depth~variable, scales = "free_x")
 
 for (i_var in OIA_variables[-6]) {
   # i_var <- OIA_variables[5]
@@ -3378,9 +3411,28 @@ for (i_var in OIA_variables[-6]) {
       contour_level = i_contour_level,
       legend_title = i_legend_title,
       breaks = i_breaks,
-      legend_position = "right"
+      legend_position = "top"
     )
+
   
+  p_zonal <- acidification_depth_layer_total_zonal %>%
+    filter(variable == i_var) %>%
+    ggplot(aes(delta_total, lat, col = tref)) +
+    geom_vline(xintercept = i_contour_level, col = "grey50") +
+    geom_path() +
+    scale_x_continuous(breaks = as.numeric(i_breaks)[c(FALSE, TRUE)]) +
+    scale_color_manual(values = three_year_colors,
+                       name = "1800-") +
+    labs(x = str_replace(i_legend_title, "<br>", " "),
+         y = "Latitude (°N)") +
+    coord_cartesian(expand = 0) +
+    theme(axis.title.x = element_markdown(),
+          strip.text = element_blank(),
+          legend.position = "top",
+          legend.direction = "vertical") +
+    facet_grid(depth ~.)
+  
+    
   p_trends <- acidification_depth_layer_total_trend %>%
     filter(variable == i_var) %>%
     ggplot(aes(pCO2, delta_total, col = biome, group = biome)) +
@@ -3391,21 +3443,24 @@ for (i_var in OIA_variables[-6]) {
     scale_x_continuous(
       breaks = round(unique(acidification_depth_layer_total_trend$pCO2))) +
     scale_color_okabeito() +
-    labs(y = i_legend_title,
+    labs(y = str_replace(i_legend_title, "<br>", " "),
          x = expression(pCO["2,atm"]~(ppm))) +
-    theme(axis.title.y = element_blank(),
-          strip.text = element_blank(),
-          legend.title = element_blank()) +
+    theme(axis.title.y = element_markdown(),
+          # strip.text = element_blank(),
+          strip.background = element_blank(),
+          legend.title = element_blank(),
+          legend.position = "top",
+          legend.direction = "vertical") +
     facet_grid(depth ~.)
   
-  p_maps + p_trends +
-    plot_layout(widths = c(3,1))
+  p_maps + p_zonal + p_trends +
+    plot_layout(widths = c(4,1,1.5))
   
   ggsave(
     here::here(
       paste0("output/publication/maps_depth_layer_",i_var,"_total_changes.png")
     ),
-    width = 10,
+    width = 9,
     height = 10,
     dpi = 600,
     bg = "white"
@@ -4216,12 +4271,15 @@ ocean_volume_total <-
   pull
 
 
+acidification_volume_binned_all <- 
 acidification_volume_binned_all %>% 
-  filter(variable != "SIR") %>% 
-  mutate(tref = paste0("1800-", tref),
+  mutate(#tref = paste0("1800-", tref),
          tref = as.factor(tref),
          delta_total = fct_relevel(delta_total, "(0, Inf]", after = Inf),
-         volume_rel = 100 * volume / ocean_volume_total) %>%
+         volume_rel = 100 * volume / ocean_volume_total)
+
+
+acidification_volume_binned_all %>%
   ggplot(aes(delta_total, volume_rel, col=tref, fill = tref, group=tref)) +
   geom_area(alpha = 0.2,
             position = position_identity()) +
@@ -4238,13 +4296,145 @@ acidification_volume_binned_all %>%
     axis.title.x = element_blank()
   )
 
+acidification_volume_binned_all %>%
+  filter(variable == "OmegaAragonite") %>% 
+  distinct(delta_total)
+
+
+
+p_vol_OmegaAragonite <- acidification_volume_binned_all %>%
+  filter(variable == "OmegaAragonite") %>%
+  ggplot(aes(
+    delta_total,
+    volume_rel,
+    col = tref,
+    fill = tref,
+    group = tref
+  )) +
+  geom_area(alpha = 0.2,
+            position = position_identity()) +
+  scale_color_manual(values = three_year_colors, name = "1800 - ") +
+  scale_fill_manual(values = three_year_colors, name = "1800 - ") +
+  scale_x_discrete(
+    labels = c(
+      ">0",
+      "",
+      "-0.1 -\n-0.2",
+      "",
+      "-0.3 -\n-0.4",
+      "",
+      "-0.5 -\n-0.6",
+      "",
+      "-0.7 -\n-0.8",
+      ""
+    ),
+    limits = rev
+  ) +
+  coord_cartesian(expand = 0) +
+  facet_wrap( ~ variable,
+              scales = "free_x",
+              labeller = labeller(variable = x_axis_labels)) +
+  labs(y = "Acidified volume (% of total volume)") +
+  theme(
+    strip.background = element_blank(),
+    strip.text.x = element_markdown(),
+    legend.title = element_blank(),
+    legend.position = "none",
+    axis.title = element_blank()
+  )
+
+acidification_volume_binned_all %>%
+  filter(variable == "H_free") %>% 
+  distinct(delta_total)
+
+
+
+p_vol_H_free <- acidification_volume_binned_all %>%
+  filter(variable == "H_free") %>%
+  ggplot(aes(
+    delta_total,
+    volume_rel,
+    col = tref,
+    fill = tref,
+    group = tref
+  )) +
+  geom_area(alpha = 0.2,
+            position = position_identity()) +
+  scale_color_manual(values = three_year_colors, name = "1800 - ") +
+  scale_fill_manual(values = three_year_colors, name = "1800 - ") +
+  scale_x_discrete(
+    labels = c(
+      "<0",
+      "",
+      "0.5 - 1",
+      "",
+      "1.5 - 2",
+      "",
+      "2.5 - 3",
+      ""
+    )
+  ) +
+  coord_cartesian(expand = 0) +
+  facet_wrap( ~ variable,
+              scales = "free_x",
+              labeller = labeller(variable = x_axis_labels)) +
+  labs(y = "Acidified volume (% of total volume)") +
+  theme(
+    strip.background = element_blank(),
+    strip.text.x = element_markdown(),
+    # legend.title = element_blank(),
+    legend.position = c(0.85,0.65),
+    axis.title.x = element_blank()
+  )
+
+acidification_volume_binned_all %>%
+  filter(variable == "tco2") %>%
+  distinct(delta_total)
+
+
+p_vol_tco2 <- acidification_volume_binned_all %>%
+  filter(variable == "tco2") %>%
+  ggplot(aes(
+    delta_total,
+    volume_rel,
+    col = tref,
+    fill = tref,
+    group = tref
+  )) +
+  geom_area(alpha = 0.2,
+            position = position_identity()) +
+  scale_color_manual(values = three_year_colors) +
+  scale_fill_manual(values = three_year_colors) +
+  scale_x_discrete(
+    labels = c("<0", "", "10-20", "", "30-40", "", "50-60", "", "70-80", "")
+  ) +
+  coord_cartesian(expand = 0) +
+  facet_wrap( ~ variable,
+              scales = "free_x",
+              labeller = labeller(variable = x_axis_labels)) +
+  labs(y = "Acidified volume (% of total volume)") +
+  theme(
+    strip.background = element_blank(),
+    strip.text.x = element_markdown(),
+    legend.title = element_blank(),
+    legend.position = "none",
+    axis.title = element_blank()
+  )
+
+
+p_vol <-
+  p_vol_OmegaAragonite + p_vol_H_free + p_vol_tco2 +
+  plot_layout(ncol = 1)
+
+rm(p_vol_OmegaAragonite, p_vol_H_free, p_vol_tco2)
+p_vol
 
 ggsave(
   here::here(
     "output/publication/acidification_volume_binned.png"
   ),
-  width = 10,
-  height = 6,
+  width = 4,
+  height = 8,
   dpi = 600,
   bg = "white"
 )
@@ -6291,6 +6481,18 @@ for (i_var in OIA_variables[-6]) {
       breaks = i_breaks
     )
   
+  if(i_var == "tco2"){
+    p_global_section_tco2 <- p_global_section_period3
+  }
+  
+  if(i_var == "H_free"){
+    p_global_section_H_free <- p_global_section_period3
+  }
+  
+  if(i_var == "OmegaAragonite"){
+    p_global_section_OmegaAragonite <- p_global_section_period3
+  }
+  
   
   print(
     wrap_plots(
@@ -6325,6 +6527,43 @@ for (i_var in OIA_variables[-6]) {
   )
   
 }
+
+
+
+
+print(
+  wrap_plots(
+    p_global_section_OmegaAragonite &
+      theme(
+        axis.title.x = element_blank(),
+        axis.text.x.bottom = element_blank(),
+        title = element_blank()
+      ),
+    p_global_section_H_free &
+      theme(
+        axis.title.x = element_blank(),
+        axis.text.x = element_blank(),
+        title = element_blank()
+      ),
+    p_global_section_tco2 &
+      theme(axis.text.x.top = element_blank(),
+            title = element_blank()),
+    ncol = 1
+  )
+)
+
+ggsave(
+  here::here(
+    paste0(
+      "output/publication/global_sections_all_variables_total_changes.png"
+    )
+  ),
+  width = 6,
+  height = 8,
+  dpi = 600,
+  bg = "white"
+)
+
 
 rm(acidification_global_section_total,
    i_acidification_global_section_total)
